<resources>
    <string name="server_client_id" translatable="false">794481543923-2qsvbsli9nr3inhtachlnq5hm3re9mpd.apps.googleusercontent.com</string>

    <string name="app_name">AMA</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="authentication_error">Authentication failed.</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="wrong_email_error">Wrong Email Address!</string>
    <string name="short_password_error">Short Password!</string>
    <string name="empty_name_error">Please enter you name</string>
    <string name="account_creation_error">Couldn\'t create the account</string>
    <string name="topic_name">Topic Name</string>
    <string name="add_topic">Add Topic</string>
    <string name="topic_add_error">Failed to add topic</string>
    <string name="topic_add_message">Topic added successfully</string>
    <string name="profile_picture_content_description">Profile Picture</string>
    <string name="camera_icon_content_description">Camera Icon</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="all_topics">All</string>
    <string name="my_topics">Following</string>
    <string name="ask">Ask</string>
    <string name="character_counter_format" translatable="false">%d/%d</string>
    <string name="topic">Topic</string>
    <string name="click_to_select_topic">Click to select topic</string>
    <string name="select_topic">Select topic</string>
    <string name="your_question">Your Question</string>
    <string name="question_hint">How, What, Why …?</string>
    <string name="navigation_feed">Feed</string>
    <string name="navigation_topics">Topics</string>
    <string name="navigation_notifications">Notifications</string>
    <string name="navigation_me">Me</string>
    <string name="read">Answers</string>
    <string name="answer">Questions</string>
    <string name="your_answer">Your Answer</string>
    <string name="user_info_format" translatable="false">%s, %s</string>
    <string name="answer_timestamp_format">Answered %s</string>
    <string name="notification_format">%s answered your question</string>
    <string name="title">Title</string>
    <string name="user_name">User Name</string>
    <string name="explore">Explore</string>
    <string name="edit">Edit</string>
    <string name="top_answers">Top Answers</string>
    <string name="feed_empty">Empty feed</string>
    <string name="widget_user_format">%s answered</string>
    <string name="message_answer_added_successfully">Answer added successfully</string>
    <string name="error_answer">Answer couldn\'t be added</string>
    <string name="error_empty_answer">Please provide some answer!</string>
    <string name="message_question_added_successfully">Question was added successfully</string>
    <string name="error_question">Failed to add question, please check network, and try again</string>
    <string name="error_empty_question">Question can\'t be empty!</string>
    <string name="error_null_topic">Please select a topic!</string>
    <string name="loading">LOADING…</string>
    <string name="btn_answer">Answer</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
</resources>
